--- a/vignettes/example_hmm.Rmd
+++ b/vignettes/example_hmm.Rmd
@@ -20,6 +20,7 @@ knitr::opts_chunk$set(
 library("ino")
 options(ino_progress = FALSE)
 library("ggplot2")
+library("dplyr")
 set.seed(1)
 ```
 
@@ -54,10 +55,10 @@ hmm_ino <- setup_ino(
 
 ### Random initialization
 
-We first use randomly chosen starting values. 
+We first use randomly chosen starting values. Note that running the following code snippet may take a few minutes, as the optimization is performed with 100 different sets of starting values. The results of the 100 runs are contained in the example ino object `example_hmm.RData`. 
 
 ```{r}
-for(i in 1:3)
+for(i in 1:100)
   hmm_ino <- random_initialization(hmm_ino)
 ```
 
@@ -79,7 +80,7 @@ for(val in starting_values)
 To illustrate the subset initialization strategy, we fit our HMM to the first 50\% of the observation. The starting values for these subsets are chosen randomly. The function `subset_initialization()` then fits the HMM again to the entire sample using the estimates obtained from the subsets as initial values.
 
 ```{r}
-for(i in 1:3)
+for(i in 1:100)
   hmm_ino <- subset_initialization(hmm_ino, arg = "data", how = "first", prop = 0.5)
 ```
 
@@ -102,18 +103,51 @@ Using `summary`, we can investigate all optimization runs:
 summary(hmm_ino)
 ```
 
-The table further indicates that (e.g.) the fourth optimization converged to the global optimum. We can extract the corresponding initial values and estimates as follows:
+To see which starting values lead to the global optimum, we can access the initial values stored under `hmm_ino$runs$pars`.
+
 
 ```{r}
-hmm_ino$runs$pars[[4]]
+hmm_ino$runs$pars[[which.min(summary(hmm_ino)$.optimum)]]
 ```
 
 
 ### Optimization time
 
-We use the `plot()` function to investigate the computation time. Intuitively, the optimization runs with fixed starting values should be faster than with random starting values, since we have carefully chosen the fixed starting values by investigating the data.The boxplots confirm this intuition: 
+We use the `plot()` function to investigate the computation time. Intuitively, the optimization runs with fixed starting values should be faster than with random starting values, since we have carefully chosen the fixed starting values by investigating the data. The boxplots confirm this intuition: 
 
 ```{r}
 plot(hmm_ino, var = ".time", by = ".strategy")
+```
+
+Using `summary()`, we can also compute the average time per strategy:
+
+```{r}
+summary(hmm_ino, group = ".strategy", "mean_time" = mean(.time))
+```
+
+This comparison can be considered somehow 'unfair', as not all optimization runs lead to the global optimum --- optimization runs that lead to local optima may then have less iterations. We can first check which runs lead to the global optimum of 342.32. For that, we will use the data manipulation functions provided by the package `dplyr`.
+
+```{r}
+summary(hmm_ino) %>% 
+  mutate(global_optimum = ifelse(.optimum < 343, 1, 0)) %>% 
+  group_by(.strategy) %>% 
+  summarise(proportion_global_optimum = mean(global_optimum))
+```
+
+For the subset approach, only 7\% of the runs lead in the global optimum!
+Let's again compare the average computation time, but only for those runs that lead to the global optimum:
+
+```{r}
+summary(hmm_ino) %>% 
+  filter(.optimum < 343) %>% 
+  group_by(.strategy) %>% 
+  summarise(mean_time = mean(.time))
+```
+
+
+
+
+```{r}
+# save(hmm_ino, file = "example_hmm.RData")
 ```
 
