--- a/vignettes/example_probit.Rmd
+++ b/vignettes/example_probit.Rmd
@@ -24,5 +24,5 @@ library("dplyr")
 set.seed(1)
 ```
 
-This vignette^[The vignette was build using R `r paste(R.Version()[6:7], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] describes the workflow of the {ino} package for the likelihood optimization of a probit model.
+This vignette^[The vignette was build using R `r paste(R.Version()[c("major","minor")], collapse = ".")` with the {ino} `r utils::packageVersion("ino")` package.] describes the workflow of the {ino} package for the likelihood optimization of a probit model.
 
